--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.6",
         "@testing-library/user-event": "^12.8.3",
-        "base-64": "^1.0.0",
+        "axios": "^0.21.1",
         "electron-is-dev": "^2.0.0",
         "electron-squirrel-startup": "^1.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "web-vitals": "^1.1.2"
     },
