--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "main": "public/electron.js",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.11.4",
+        "@material-ui/icons": "^4.11.2",
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.6",
         "@testing-library/user-event": "^12.8.3",
