--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.21.1",
         "electron-is-dev": "^2.0.0",
         "electron-squirrel-startup": "^1.0.0",
+        "qrcode.react": "^1.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
