--- a/package.json
+++ b/package.json
@@ -61,9 +61,10 @@
     },
     "config": {
         "forge": {
-            "packagerConfig": {},
-            "icon": "src/icons/mac/icon.icns",
-            "name": "SuchClient",
+            "packagerConfig": {
+                "icon": "src/icons/mac/icon.icns",
+                "name": "SuchClient"
+            },
             "makers": [
                 {
                     "name": "@electron-forge/maker-squirrel",
