electron forge configfile created

--- a/package.json
+++ b/package.json
@@ -60,33 +60,6 @@
         "wait-on": "^5.3.0"
     },
     "config": {
-        "forge": {
-            "packagerConfig": {
-                "icon": "src/icons/mac/icon.icns",
-                "name": "SuchClient"
-            },
-            "makers": [
-                {
-                    "name": "@electron-forge/maker-squirrel",
-                    "config": {
-                        "name": "dogecoin_wallet"
-                    }
-                },
-                {
-                    "name": "@electron-forge/maker-zip",
-                    "platforms": [
-                        "darwin"
-                    ]
-                },
-                {
-                    "name": "@electron-forge/maker-deb",
-                    "config": {}
-                },
-                {
-                    "name": "@electron-forge/maker-rpm",
-                    "config": {}
-                }
-            ]
-        }
+        "forge": "forge.config.js"
     }
 }
