Solved packaging issue

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "dogecoin-wallet",
     "version": "0.1.0",
     "main": "public/electron.js",
+    "homepage": "./",
     "private": true,
     "dependencies": {
         "@material-ui/core": "^4.11.4",
