--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
+        "dev": "concurrently -k -n \"react,electron\" -c \"blue,cyan\" \"BROWSER=none npm start\" \"npm:electron\"",
         "electron": "wait-on tcp:3000 && electron-forge start",
         "package": "react-scripts build && electron-forge package",
         "make": "react-scripts build && electron-forge make"
