--- a/package.json
+++ b/package.json
@@ -4,23 +4,6 @@
     "main": "public/electron.js",
     "homepage": "./",
     "private": true,
-    "dependencies": {
-        "@material-ui/core": "^4.11.4",
-        "@material-ui/icons": "^4.11.2",
-        "@material-ui/lab": "*",
-        "@testing-library/jest-dom": "^5.12.0",
-        "@testing-library/react": "^12.0.0",
-        "@testing-library/user-event": "^13.2.1",
-        "axios": "^0.21.4",
-        "electron-is-dev": "^2.0.0",
-        "electron-squirrel-startup": "^1.0.0",
-        "qrcode.react": "^1.0.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.3",
-        "web-vitals": "^2.1.0"
-    },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
@@ -50,15 +33,28 @@
         ]
     },
     "devDependencies": {
-        "@electron-forge/cli": "^6.0.0-beta.54",
-        "@electron-forge/maker-deb": "^6.0.0-beta.54",
-        "@electron-forge/maker-rpm": "^6.0.0-beta.54",
-        "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
-        "@electron-forge/maker-zip": "^6.0.0-beta.54",
-        "concurrently": "^6.1.0",
-        "electron": "^13.5.2",
+        "@electron-forge/cli": "^6.0.0-beta.61",
+        "@electron-forge/maker-deb": "^6.0.0-beta.61",
+        "@electron-forge/maker-rpm": "^6.0.0-beta.61",
+        "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
+        "@electron-forge/maker-zip": "^6.0.0-beta.61",
+        "concurrently": "^6.3.0",
+        "electron": "^15.2.0",
         "electron-devtools-installer": "^3.2.0",
         "wait-on": "^6.0.0"
+    },
+    "dependencies": {
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "*",
+        "axios": "^0.24.0",
+        "electron-is-dev": "^2.0.0",
+        "electron-squirrel-startup": "^1.0.0",
+        "qrcode.react": "^1.0.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.3"
     },
     "config": {
         "forge": "forge.config.js"
