Added description to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "dogecoin-wallet",
+    "description": "Client for basic interaction with a Dogecoin Node",
     "version": "0.1.0",
     "main": "public/electron.js",
     "homepage": "./",
