Added License to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "dogecoin-wallet",
     "description": "Client for basic interaction with a Dogecoin Node",
+    "license": "MIT",
     "version": "0.1.0",
     "main": "public/electron.js",
     "homepage": "./",
