--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@electron-forge/maker-rpm": "^6.0.0-beta.63",
         "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
         "@electron-forge/maker-zip": "^6.0.0-beta.63",
+        "@electron-forge/publisher-github": "^6.0.0-beta.63",
         "concurrently": "^7.0.0",
         "electron": "^16.0.7",
         "electron-devtools-installer": "^3.2.0",
