--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
-        "react-scripts": "5.0.0",
-        "update-electron-app": "^2.0.1"
+        "react-scripts": "5.0.0"
     },
     "config": {
         "forge": "forge.config.js"
