--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,11 @@
 name: Build
-on: [pull_request]
+on:
+  pull_request:
+    path:
+      - src/**/*
+      - public/**/*
+      - package.json
+      - forge.config.js
 
 jobs:
   build:
